# kitabguru-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  faq.txt  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  admin.py  auth.py  chat.py  iot.py  media.py  users.py
app/core/: __init__.py  dependencies.py  rate_limit.py  security.py
app/models/: __init__.py  iot.py  media.py  user.py
app/providers/: __init__.py  cloudflare_image.py  edge_tts.py  groq_stt.py  inference_client.py  light_llm.py
app/schemas/: __init__.py  auth.py  chat.py  iot.py  media.py  user.py
app/services/: audio_manager.py  auth_service.py  chat_service.py  iot_service.py  media_service.py  purge_service.py
app/tasks/: __init__.py  video_pipeline.py
tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_media.py
