[project]
name = "kitabguru-backend"
version = "0.1.0"
description = "KitabGuru Backend — Auth, Chat Orchestration, Media Pipeline, IoT Coordination."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Auth & Security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # HTTP Client (proxy to inference)
    "httpx>=0.27.0",

    # Media
    "edge-tts>=6.1.9",
    "Pillow>=10.0.0",

    # STT
    "groq>=0.9.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
